Declare the height of search box to avoid layout shift

--- a/gcp/appengine/frontend3/src/styles.scss
+++ b/gcp/appengine/frontend3/src/styles.scss
@@ -410,6 +410,7 @@ pre {
   --md-sys-color-primary: $osv-text-color;
   --md-sys-color-on-surface: $osv-text-color;
   --md-sys-color-on-surface-variant: $osv-text-color;
+  height: 56px;
 
   // Make the inner search field full-width.
   .query-field {
